[tool.poetry]
name = "libpythonpro"
version = "0.1.0"
description = ""
authors = ["Fabio F. de Souza <fabiofsrj@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
